# AIRO--AI-Research-Orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agents.txt  core.txt  dev.txt  ml.txt  mlruns.db  project_report.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
agents/: __init__.py  config_agent.py  critic_agent.py  data_agent.py  evaluator_agent.py  reporter_agent.py  training_agent.py
airo-frontend/: package-lock.json  package.json
airo-frontend/app/: globals.css  layout.tsx  page.tsx
airo-frontend/app/leaderboard/: page.tsx
airo-frontend/app/report/: page.tsx
airo-frontend/app/run/: page.tsx
airo-frontend/app/trace/: page.tsx
airo-frontend/components/dashboard/: AgentPipeline.tsx  ExperimentCard.tsx  MetricCard.tsx  StatusBar.tsx
airo-frontend/components/layout/: PageWrapper.tsx  Sidebar.tsx  TopBar.tsx
airo-frontend/components/leaderboard/: LeaderboardTable.tsx
airo-frontend/components/report/: InteractiveCharts.tsx  MarkdownViewer.tsx
airo-frontend/components/run/: ConfigForm.tsx  ResultsPanel.tsx  RunningBanner.tsx  UploadZone.tsx
airo-frontend/components/trace/: LogTerminal.tsx
airo-frontend/lib/: api.ts
airo-frontend/store/: experimentStore.ts
airo-frontend/types/: airo.ts
api/: main.py
frontend/: app.py
frontend/components/: agent_status_card.py  metric_chart.py  sidebar.py  theme.py
frontend/pages/: 1_run_experiment.py  2_live_trace.py  3_leaderboard.py  4_report_viewer.py
orchestrator/: __init__.py  graph.py  router.py  runner.py  state.py
prompts/: config_agent.txt  critic_agent.txt  data_agent.txt  evaluator_agent.txt  reporter_agent.txt  system_prompt.txt  training_agent.txt
tests/: test_critic_agent.py  test_data_tools.py  test_evaluator_agent.py  test_pipeline_integration.py
tools/: __init__.py  data_tools.py  llm_tools.py  metrics_tools.py  mlflow_tools.py  report_tools.py  shap_tools.py
