[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airo"
version = "0.1.0"
description = "AIRO — AI Research Orchestrator: Multi-Agent ML Automation System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core data 
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=17.0.0",

    # Validation & config 
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",

    # ── Templating ─────────────────────────────────────────────────────────────
    "jinja2>=3.1.0",
    "markdown>=3.7.0",

    # ── CLI & logging ──────────────────────────────────────────────────────────
    "rich>=13.8.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
    "tenacity>=9.0.0",

    # ── Frontend ───────────────────────────────────────────────────────────────
    "streamlit>=1.39.0",
    "plotly>=5.24.0",

    # ── ML ─────────────────────────────────────────────────────────────────────
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "mlflow>=2.16.0",
    "shap>=0.46.0",
    "matplotlib>=3.9.0",
    "dvc>=3.50.0",

    # ── Agent orchestration ────────────────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "groq>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
    "weasyprint>=62.0",     # PDF reports (requires system libs)
    "optuna>=3.6.0",        # Planned: Config Agent v2
    "lightgbm>=4.5.0",      # Optional: extra tree framework
]

[project.scripts]
airo = "orchestrator.runner:app"

[tool.setuptools.packages.find]
include = ["agents*", "orchestrator*", "tools*", "frontend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
